[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["bamjun <khy5116@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9"
gunicorn = "^23.0.0"
django-ninja = "^1.3.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
